[Chore] 코드 수정 및 삭제